http-probe.yaml
--- # Livenessprobe example for HTTP endpoint
apiVersion: v1
kind: Pod
metadata:
  name: liveness-probe-example
  labels:
    name: liveness-probe-app
    app: my-server
spec:
  containers:
    - name: liveness-probe-pod
      image: samarthya/epserver:1.0
      resources:
        limits:
          memory: "250Mi"
          cpu: "2000m"
      livenessProbe:
        httpGet:
          path: /hello
          port: 9090
        initialDelaySeconds: 5
        periodSeconds: 3
      ports:
        - containerPort: 9090
