service-epserver.yaml
--- # Service definition
apiVersion: v1
kind: Service
metadata:
  name: service-expose
spec:
  type: NodePort
  selector:
    app: my-go-server
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 9090
