network-policy.yaml
--- # Network Policy applied to the pods.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: my-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: my-go-server
  policyTypes:
    - Ingress
    - Egress
  # Allow all traffic form everywhere.
  # Reference - https://kubernetes.io/docs/concepts/services-networking/network-policies/#default-allow-all-ingress-traffic
  egress:
    - {}
  ingress:
    - {}
